--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,22 @@
 
 
 }
-.header{ border: 5px; padding: 5px; font-style: italic; 
+.header{ border: 5px; padding: 5px; font-style: italic; font-size: 15px; color: brown;
 
 }
-img{width: 100%; height: auto;}
-img {
-    opacity: 0.50%;
-}
+
+img{width: 100%; height: auto; opacity: 0.50%;}
+
+        
+
 
   footer{ text-align: center;
-background-color: lightsalmon;padding: 15px; 
-color: white; font-style: italic; font-weight: bolder;
+background-color: lightsalmon; padding: 5px;
+color: brown; font-style: italic; font-weight: bolder;
 font-family: 'Times New Roman', Times, serif;}
 
 .header { text-align: center; background-color: rgb(235, 202, 173);}
-.footer { border: 5px; padding: 0px; box-sizing: border-box;}
+.footer { border: 5px; padding: 5px; margin: 5px;}
 
 }
   
