--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,27 @@
-.img-div {background-size: auto; background-color: beige; border-bottom-left-radius: 10%;
 
+/* For mobile phones: */
+[class*="col-"] {
+  width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}
+
+
+.img-div {background-size: auto; background-color: beige; width: 150px; height: 150px;
 
 }
 .header{ border: 5px; padding: 5px; font-style: italic; font-size: 15px; color: brown;
@@ -7,7 +29,6 @@
 }
 
 img{width: 100%; height: auto; opacity: 0.50%;}
-
         
 
 
