--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
 .img-div {background-size: auto; background-color: beige; width: 150px; height: 150px;
 
 }
-.header{ border: 5px; padding: 5px; font-style: italic; font-size: 15px; color: brown;
+.header{ border: 5px; padding: 5px; font-style: italic; font-size: 0.75em; color: brown;
 
 }
 
